# vasak-file-manager

./: README.md  biome.json  index.html  package.json  tsconfig.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  vasak-file-manager.desktop.hbs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/locales/: en.yml  es.yml
src-tauri/src/: dir_reader.rs  dir_size.rs  dir_watcher.rs  extract.rs  file_operations.rs  global_search.rs  lib.rs  main.rs  polkit.rs  read_file.rs  system_icons.rs  utils.rs
src-tauri/src/open_with/: linux.rs  mod.rs  types.rs  utils.rs
src-tauri/src/terminal/: mod.rs  types.rs
src/assets/: main.css
src/components/: AddressBarComponent.vue
src/components/content/: ContentInformation.vue  ContentInformationContentProperies.vue  ContentInformationHeadComponent.vue  ContentInformationPreviewComponent.vue
src/components/dialogs/: ConflictDialogComponent.vue  NewItemDialogComponent.vue  OpenWithDialogComponent.vue  RenameDialogComponent.vue
src/components/drag/: DragOverlayComponent.vue  InboundDragOverlayComponent.vue
src/components/drive/: DriveCardComponent.vue
src/components/filebrowser/: FileBrowserActionMenuComponent.vue  FileBrowserComponent.vue  FileBrowserConflictDialogComponent.vue  FileBrowserContentComponent.vue  FileBrowserContextMenuComponent.vue  FileBrowserDragOverlayComponent.vue  FileBrowserEntryIconComponent.vue  FileBrowserErrorComponent.vue  FileBrowserInboundDragOverlayComponent.vue  FileBrowserLoadingComponent.vue  FileBrowserMoreOptionsSubMenuComponent.vue  FileBrowserNewItemDialogComponent.vue  (+6 more)
src/composables/: use-drives.ts  useReactiveIcon.ts
src/constants/: file-extensions.ts  navigator.ts  search.ts
src/data/: user-paths.ts
src/layouts/: WindowAppLayout.vue  WindowLayout.vue
src/types/: contextMenu.ts  dir-entry.ts  drive-info.ts  file-browser.ts  navigator.ts  runtime.ts  short.ts  shortcut.ts  user-stats.ts  vue3-smooth-dnd.d.ts
src/utils/: byte-parser.ts  clone.ts  css-escape.ts  date-formatter.ts  file-browser-sort.ts  files.ts  images.ts  path.ts  web-view-fetures.ts
src/views/: GlobalSearchView.vue
(+93 files in other folders)
