[package]
name = "vasak-file-manager"
version = "0.1.0"
description = "A Vasak Application (template)"
authors = ["Vasak Group", "Joaquin (Pato) Decima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vasak_file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-vicons = "2"
tauri-plugin-config-manager = "2"
gtk = "0.18"
base64 = "0.22"
tauri-plugin-store = "2"
tauri-plugin-i18n-vsk = "2.1.1"
# tauri-plugin-i18n-vsk = { path = "../../tauri-plugin-i18n"}
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-system-fonts = "2"
sysinfo = { version = "0.37", features = ["linux-netdevs"] }
trash = "5.2.5"
png = "0.17"
file_icon_provider = "1.0.0"
image = { version = "0.25", default-features = false, features = ["png"] }
lru = "0.12"
once_cell = "1.19"
tantivy = "0.22"
walkdir = "2.5"
rayon = "1.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
notify = "8"
tauri-plugin-drag = "2"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
